[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "fuzzy-pickles"
version = "0.1.0"

[dependencies]
unicode-xid = "0.0.4"

[dependencies.peresil]
git = "https://github.com/shepmaster/peresil"
features = ["combinators"]

[dependencies.fuzzy-pickles-derive]
path = "fuzzy-pickles-derive"
