[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "fuzzy-pickles-derive"
version = "0.1.0"
edition = "2018"

description = "Procedural macros for fuzzy-pickles"
repository = "https://github.com/shepmaster/fuzzy-pickles"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
syn = "1.0.38"
proc-macro2 = "1.0.19"
